--- a/playbooks/roles/setup_common/tasks/base.yaml
+++ b/playbooks/roles/setup_common/tasks/base.yaml
@@ -52,6 +52,8 @@
     dest: /root/
 
 - name: Set certain sysctl values for Tor
+  vars:
+    max: "{{ (ansible_facts.memtotal_mb < 2048) | ternary((2**16) | int, (2**18) | int) }}"
   ansible.posix.sysctl:
     name: "{{ item.name }}"
     value: "{{ item.value }}"
@@ -61,6 +63,11 @@
     - { name: "kernel.sysrq", value: 0 }
     - { name: "net.ipv4.tcp_fin_timeout", value: 10 }
     - { name: "net.ipv4.tcp_notsent_lowat", value: 131072 }
+    - { name: "net.ipv4.tcp_syncookies", value: 1 }
+    - { name: "net.netfilter.nf_conntrack_max", value: "{{ max }}" }
+    - { name: "net.netfilter.nf_conntrack_buckets", value: "{{ max }}" }
+    - { name: "net.ipv4.tcp_max_syn_backlog", value: "{{ max }}" }
+    - { name: "net.core.somaxconn", value: "{{ max }}" }
 
 - name: Set PATH in crontab
   ansible.builtin.cron:
