allow poweron in info playbook

--- a/playbooks/info.yaml
+++ b/playbooks/info.yaml
@@ -2,12 +2,14 @@
 - name: Info Misc
   hosts: "!snowflake:!tor"
   roles:
+    - role: poweron
     - role: info_common
     - role: info_metrics
 
 - name: Info Snowflake
   hosts: snowflake
   roles:
+    - role: poweron
     - role: info_common
     - role: info_metrics
     - role: info_snowflake
@@ -15,6 +17,7 @@
 - name: Info Tor
   hosts: tor
   roles:
+    - role: poweron
     - role: info_common
     - role: info_metrics
     - role: info_tor
