quotes clean up + enable --check for info roles

--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -3,13 +3,13 @@
 facts_subset:
   - "!all"
   - "!min"
-  - "all_ipv4_addresses"
-  - "all_ipv6_addresses"
-  - "architecture"
-  - "default_ipv4"
-  - "default_ipv6"
-  - "distribution"
-  - "hardware"
+  - all_ipv4_addresses
+  - all_ipv6_addresses
+  - architecture
+  - default_ipv4
+  - default_ipv6
+  - distribution
+  - hardware
 
 # where to store certificate materials
 ca_dir: "{{ playbook_dir }}/../secrets/ca"
