--- a/playbooks/roles/info_tor/defaults/main.yaml
+++ b/playbooks/roles/info_tor/defaults/main.yaml
@@ -6,3 +6,8 @@ bridge_distribution: ""
 ddos_metrics: false
 
 firewall_use_ddos: false
+
+# defined here to allow --check
+_fingerprint: ""
+_fingerprint_ed25519: ""
+_fingerprint_hashed: ""
