--- a/playbooks/roles/setup_common/tasks/base.yaml
+++ b/playbooks/roles/setup_common/tasks/base.yaml
@@ -51,32 +51,43 @@
     src: .selected_editor
     dest: /root/
 
-- name: Set certain sysctl values for Tor
+- name: Set certain common sysctl values
   vars:
-    max: "{{ (ansible_facts.memtotal_mb < 2048) | ternary((2**16) | int, (2**18) | int) }}"
+    max: "{{ (ansible_facts.memtotal_mb < 1024) | ternary((2**16) | int, (2**18) | int) }}"
   ansible.posix.sysctl:
     name: "{{ item.name }}"
     value: "{{ item.value }}"
-    sysctl_file: /etc/sysctl.d/21tor-common.conf
+    sysctl_file: /etc/sysctl.d/21common.conf
     sysctl_set: true
   loop:
-    - { name: "kernel.sysrq", value: 0 }
-    - { name: "net.ipv4.tcp_fin_timeout", value: 10 }
-    - { name: "net.ipv4.tcp_notsent_lowat", value: 131072 }
-    - { name: "net.ipv4.tcp_syncookies", value: 1 }
-    - { name: "net.netfilter.nf_conntrack_max", value: "{{ max }}" }
-    - { name: "net.netfilter.nf_conntrack_buckets", value: "{{ max }}" }
-    - { name: "net.ipv4.tcp_max_syn_backlog", value: "{{ max }}" }
-    - { name: "net.core.somaxconn", value: "{{ max }}" }
+    - { name: kernel.sysrq, value: 0 }
+    - { name: net.ipv4.tcp_fin_timeout, value: 10 }
+    - { name: net.ipv4.tcp_notsent_lowat, value: 131072 }
+
+- name: Set certain sysctl values if non-DDoS firewall
+  when: not firewall_use_ddos
+  vars:
+    max: "{{ (ansible_facts.memtotal_mb < 1024) | ternary((2**16) | int, (2**18) | int) }}"
+  ansible.posix.sysctl:
+    name: "{{ item.name }}"
+    value: "{{ item.value }}"
+    sysctl_file: 21firewall.conf
+    sysctl_set: true
+  loop:
+    - { name: net.ipv4.tcp_syncookies, value: 1 }
+    - { name: net.netfilter.nf_conntrack_max, value: "{{ max }}" }
+    - { name: net.netfilter.nf_conntrack_buckets, value: "{{ max }}" }
+    - { name: net.ipv4.tcp_max_syn_backlog, value: "{{ max }}" }
+    - { name: net.core.somaxconn, value: "{{ max }}" }
 
 - name: Set PATH in crontab
   ansible.builtin.cron:
-    name: "PATH"
+    name: PATH
     value: /usr/sbin:/usr/bin:/sbin/:/bin
     env: true
 
 - name: Set SHELL in crontab
   ansible.builtin.cron:
-    name: "SHELL"
+    name: SHELL
     value: /bin/bash
     env: true
