factor out nginx installation into an own task

--- a/playbooks/roles/setup_common/defaults/main.yaml
+++ b/playbooks/roles/setup_common/defaults/main.yaml
@@ -27,3 +27,6 @@ custom_command: ""
 
 # skip certain tasks for image being snapshotted
 is_a_snapshot_image: false
+
+# whether nginx should have a default listener
+nginx_listener_default: false
