--- a/playbooks/roles/setup_common/handlers/main.yaml
+++ b/playbooks/roles/setup_common/handlers/main.yaml
@@ -10,15 +10,15 @@
     name: ssh
     state: reloaded
 
-- name: Restart Nginx
-  listen: "Restart Nginx"
+- name: Restart nginx
+  listen: "Restart nginx"
   ansible.builtin.systemd_service:
     name: nginx
     state: restarted
     no_block: true
 
-- name: Reload Nginx
-  listen: "Reload Nginx"
+- name: Reload nginx
+  listen: "Reload nginx"
   ansible.builtin.systemd_service:
     name: nginx
     state: reloaded
