--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -107,15 +107,13 @@
         - kernel
         - kernel-src
 
-    - name: nginx
+    - name: Nginx
       when: nginx_listener_default or metrics_port
       ansible.builtin.import_tasks: nginx.yaml
       tags:
-        - metrics
         - nginx
 
     - name: Metrics
-      when: metrics_port
       ansible.builtin.import_tasks: metrics.yaml
       tags:
         - metrics
