add missing files

--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -114,6 +114,7 @@
         - nginx
 
     - name: Metrics
+      when: node_metrics
       ansible.builtin.import_tasks: metrics.yaml
       tags:
         - metrics
