throttle kernel config sync

--- a/playbooks/roles/info_common/tasks/main.yaml
+++ b/playbooks/roles/info_common/tasks/main.yaml
@@ -15,6 +15,12 @@
         - ipv6
         - never
 
+    - name: Kernel config
+      ansible.builtin.import_tasks: kernel-config.yaml
+      tags:
+        - kernel-config
+        - never
+
     - name: Log Issues
       ansible.builtin.import_tasks: log-issue.yaml
       tags:
