--- a/playbooks/roles/info_common/tasks/log-issue.yaml
+++ b/playbooks/roles/info_common/tasks/log-issue.yaml
@@ -17,29 +17,10 @@
           done
   register: _result
 
-- name: Findings
+- name: Findings since {{ log_system_since }}
+  delegate_to: localhost
+  throttle: "{{ concurrent_local_jobs }}"
   when: _result.stdout
-  throttle: 1
-  block:
-    - name: Findings since {{ log_system_since }}
-      delegate_to: localhost
-      ansible.builtin.copy:
-        content: "{{ _result.stdout ~ '\n' }}"
-        dest: "{{ tmp_dir }}/issues/{{ inventory_hostname }}.log"
-
-    - name: Get Linux kernel config file name
-      changed_when: false
-      failed_when: _config_fname.stdout | length == 0 or _config_fname.rc != 0
-      ansible.builtin.shell:
-        cmd: |-
-          ls -t /boot/config-* |
-            head -n 1
-      register: _config_fname
-
-    - name: Download Linux kernel config
-      delegate_to: localhost
-      throttle: "{{ concurrent_local_jobs }}"
-      ansible.posix.synchronize:
-        mode: pull
-        src: "{{ _config_fname.stdout }}"
-        dest: "{{ tmp_dir }}/issues/{{ inventory_hostname }}.config"
+  ansible.builtin.copy:
+    content: "{{ _result.stdout ~ '\n' }}"
+    dest: "{{ tmp_dir }}/issue/{{ inventory_hostname }}.log"
