--- a/playbooks/roles/setup_common/tasks/validate.yaml
+++ b/playbooks/roles/setup_common/tasks/validate.yaml
@@ -6,26 +6,24 @@
       - "ansible_facts.distribution in ('Debian', 'Ubuntu')"
 
 - name: Validate metrics_port
-  when: metrics_port is defined and metrics_port
+  when: metrics_port
   ansible.builtin.assert:
     quiet: true
     that:
       - "metrics_port | int > 0 and metrics_port | int < 2**16"
 
 - name: Validate prometheus_server
-  when: prometheus_server is defined and prometheus_server
+  when: prometheus_server
   ansible.builtin.assert:
     quiet: true
     that:
       - "item is ansible.utils.ipv4"
-      - "metrics_port is defined"
       - "metrics_port"
   loop: "{{ prometheus_server | split(',') }}"
 
 - name: Validate RAM for kernel src
-  when: kernel_git_version is defined and kernel_git_version
+  when: kernel_git_version
   ansible.builtin.assert:
     quiet: true
     that:
-      - "ansible_facts.memtotal_mb is defined"
       - "ansible_facts.memtotal_mb > 1024"
