adapt to changed b.t.o. and onionoo answers

--- a/playbooks/roles/info_tor/tasks/bto.yaml
+++ b/playbooks/roles/info_tor/tasks/bto.yaml
@@ -10,6 +10,6 @@
   throttle: 1
   when: _result.content is defined
   ansible.builtin.lineinfile:
-    line: "{{ inventory_hostname }} {{ _result.content | split('\n') | select('search', ' obfs4 ') | first | default('n/a') }}"
+    line: "{{ inventory_hostname }} {{ _result.content | split('\n') | select('match', '\\* ') }}"
     path: "{{ tmp_dir }}/tor_bto"
     regex: "^{{ inventory_hostname }} "
