--- a/playbooks/roles/setup_common/tasks/firewall.yaml
+++ b/playbooks/roles/setup_common/tasks/firewall.yaml
@@ -20,17 +20,17 @@
 
     - name: Set certain sysctl values for native firewall
       vars:
-        max: "{{ (ansible_facts.memtotal_mb < 1024) | ternary((2**16) | int, (2**18) | int) }}"
+        _max: "{{ (ansible_facts.memtotal_mb < 1024) | ternary((2**16) | int, (2**18) | int) }}"
       ansible.posix.sysctl:
         name: "{{ item.name }}"
         value: "{{ item.value }}"
-        sysctl_file: 21firewall.conf
+        sysctl_file: /etc/sysctl.d/21firewall.conf
         sysctl_set: true
       loop:
-        - { name: net.core.somaxconn, value: "{{ max }}" }
-        - { name: net.ipv4.tcp_max_syn_backlog, value: "{{ max }}" }
-        - { name: net.netfilter.nf_conntrack_buckets, value: "{{ max }}" }
-        - { name: net.netfilter.nf_conntrack_max, value: "{{ max }}" }
+        - { name: net.core.somaxconn, value: "{{ _max }}" }
+        - { name: net.ipv4.tcp_max_syn_backlog, value: "{{ _max }}" }
+        - { name: net.netfilter.nf_conntrack_buckets, value: "{{ _max }}" }
+        - { name: net.netfilter.nf_conntrack_max, value: "{{ _max }}" }
 
     - name: Create firewall script
       ansible.builtin.template:
