--- a/playbooks/roles/setup_common/tasks/config.yaml
+++ b/playbooks/roles/setup_common/tasks/config.yaml
@@ -21,3 +21,17 @@
     dest: /etc/systemd/system/logrotate.timer.d/override.conf
   notify:
     - "Reload Systemd"
+
+# e.g. Tor refuses to start, if IPv6 ORPort is not up
+- name: Ensure that Networkd wait online systemd override dir exists
+  ansible.builtin.file:
+    path: /etc/systemd/system/systemd-networkd-wait-online.service.d/
+    state: directory
+    mode: "0755"
+
+- name: Add Networkd wait online systemd override
+  ansible.builtin.template:
+    src: networkd-wait-online.override.conf.j2
+    dest: /etc/systemd/system/systemd-networkd-wait-online.service.d/override.conf
+  notify:
+    - "Reload Systemd"
